Replace serialized car info list with Car list in the response of /cars
